# zk-trust

./: .gitignore  Deploy.sol  README.md  pyproject.toml  trust.py
krates/: computation.zok  verifier.abi  verifier.sol
